welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:16: error: not found: type yellow
def faireV(c:yellow) ={
             ^MethodsPicture:18: error: not found: type yellow
setCouleurBrosse(c:yellow);
                   ^MethodsPicture:6: error: not found: type yellow
	faireV(c:yellow);
                 ^MethodsPicture:7: error: not found: type red
	faireV(c:red);
                 ^MethodsPicture:8: error: not found: type blue
	faireV(c:blue);
                 ^MethodsPicture:9: error: not found: type green
	faireV(c:green);	
                 ^