welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	for (tout <- 1 to 3){
	for (ligne <-1 to 3){
	{
	faireV(c:yellow);
	faireV(c:red);
	faireV(c:blue);
	faireV(c:green);	
	}

	}

	}
}
def faireV(c:yellow) ={
	avance();
setCouleurBrosse(c:yellow);
baisseBrosse();
gauche();
leveBrosse();
avance();
droite();
avance();
baisseBrosse();
droite();
leveBrosse();
avance();
gauche();
avance();
baisseBrosse();
leveBrosse();
avance();
gauche();
}